--- a/stylesheet.css
+++ b/stylesheet.css
@@ -3,3 +3,54 @@
     padding: 0;
     box-sizing: border-box;
 }
+
+.dashboard-container {
+    display: grid;
+    grid-template-areas:
+        "sidebar" "header"
+        "sidebar" "main";
+    grid-template-columns: 1fr 3fr;
+    grid-template-rows: 1fr 3fr;
+}
+
+.sidebar {
+    grid-area: sidebar;
+    background-color: #d4e09b;
+    box-sizing: border-box;
+    grid-row: 1 / -1;
+    grid-column: 1 / 2;
+    padding: 1.5em 2em;
+}
+
+.sidebar-header {
+    font-size: 25px;
+    padding-bottom: 1em;
+}
+
+.nav-menu {
+    list-style: none;
+}
+
+.nav-item {
+    padding: 0.5em 0;
+}
+
+.nav-link {
+    text-decoration: none;
+}
+
+.nav-menu li:nth-child(7) {
+    margin-top: 3em;
+}
+
+.header-menu {
+    grid-area: header;
+    grid-column: 2 / 3;
+    grid-row: 1 / 2;
+}
+
+.main-content {
+    grid-area: main;
+    grid-column: 2 / 3;
+    grid-row: 2 / 3;
+}
