--- a/stylesheet.css
+++ b/stylesheet.css
@@ -1,3 +1,8 @@
+:root {
+    --main-font: "Poppins", sans-serif;
+    --main-font-size: 18px;
+}
+
 * {
     margin: 0;
     padding: 0;
@@ -9,22 +14,37 @@
     grid-template-areas:
         "sidebar" "header"
         "sidebar" "main";
-    grid-template-columns: 1fr 3fr;
-    grid-template-rows: 1fr 3fr;
+    grid-template-columns: 270px 1fr;
+    grid-template-rows: 200px 3fr;
 }
 
 .sidebar {
     grid-area: sidebar;
-    background-color: #d4e09b;
+    background-color: #B2D8CE;
     box-sizing: border-box;
     grid-row: 1 / -1;
     grid-column: 1 / 2;
     padding: 1.5em 2em;
+    box-shadow: 2px 0 8px rgba(0, 0, 0, 0.1);
+    z-index: 1;
 }
 
-.sidebar-header {
+.logo-name {
+    display: inline-flex;
+    align-items: center;
+    gap: 15px;
     font-size: 25px;
+    font-family: var(--main-font);
+    font-weight: 600;
     padding-bottom: 1em;
+    color: #5459AC;
+}
+
+.logo {
+    vertical-align: middle;
+    fill: currentColor;
+    width: 40px;
+    height: 40px;
 }
 
 .nav-menu {
@@ -37,17 +57,153 @@
 
 .nav-link {
     text-decoration: none;
+    display: inline-flex;
+    align-items: center;
+    font-size: var(--main-font-size);
+    font-family: var(--main-font);
+    font-weight: 500;
+    gap: 15px;
+    color: #5459AC;
+}
+
+.nav-link .icon {
+    vertical-align: middle;
+    fill: currentColor;
+    width: 25px;
+    height: 25px;
 }
 
 .nav-menu li:nth-child(7) {
     margin-top: 3em;
 }
 
+/* header menu */
 .header-menu {
+    box-sizing: border-box;
+    padding: 0 2em;
+    padding-top: 1em;
     grid-area: header;
     grid-column: 2 / 3;
     grid-row: 1 / 2;
+    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
 }
+
+.search-bar {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    gap: 20px;
+}
+
+.search-container {
+    flex: 2;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    gap: 15px;
+}
+
+.header-actions {
+    flex: 1;
+    box-sizing: border-box;
+    display: flex;
+    align-items: center;
+    vertical-align: middle;
+    gap: 20px;
+}
+
+.user-profile {
+    display: inline-flex;
+    justify-content: center;
+    align-content: center;
+    vertical-align: middle;
+}
+
+.avatar {
+    width: 50px;
+    height: 50px;
+    border-radius: 50%;
+    object-fit: cover;
+}
+
+.header-menu .icon {
+    vertical-align: middle;
+    fill: currentColor;
+    width: 25px;
+    height: 25px;
+}
+
+button {
+    background-color: transparent;
+    border: none;
+}
+
+input {
+    border: none;
+    background-color: rgb(226, 241, 246);
+    border-radius: 15px;
+    padding: 7px 1em;
+    width: 65%;
+}
+
+.header-actions .user-name {
+    font-family: var(--main-font);
+    font-size: 14px;
+    font-weight: 500;
+}
+
+.welcome-section {
+    box-sizing: border-box;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.welcome-section .welcome-text {
+    flex: 2;
+    display: flex;
+    align-items: center;
+    gap: 15px;
+}
+
+.welcome-section .action-buttons {
+    flex: 1;
+    display: flex;
+    align-items: center;
+    gap: 30px;
+}
+
+.welcome-section button {
+    font-family: var(--main-font);
+    background-color: #5459AC;
+    color: white;
+    padding: 0.5em 2em;
+    border-radius: 15px;
+    font-size: 14px;
+    font-weight: 500;
+}
+
+.welcome-text {
+    padding: 1em;
+}
+
+.welcome-text .avatar {
+    width: 70px;
+    height: 70px;
+}
+
+.profile h2 {
+    font-family: var(--main-font);
+    font-size: 13px;
+    font-weight: 500;
+}
+
+.profile p {
+    font-family: var(--main-font);
+    font-size: 21px;
+    font-weight: 600;
+}
+
 
 .main-content {
     grid-area: main;
