--- a/stylesheet.css
+++ b/stylesheet.css
@@ -9,6 +9,11 @@
     box-sizing: border-box;
 }
 
+body {
+    max-height: 100vh;
+    overflow-y: hidden;
+}
+
 .dashboard-container {
     display: grid;
     grid-template-areas:
@@ -26,7 +31,7 @@
     grid-column: 1 / 2;
     padding: 1.5em 2em;
     box-shadow: 2px 0 8px rgba(0, 0, 0, 0.1);
-    z-index: 1;
+    z-index: 2;
 }
 
 .logo-name {
@@ -86,6 +91,7 @@
     grid-column: 2 / 3;
     grid-row: 1 / 2;
     box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+    z-index: 1;
 }
 
 .search-bar {
@@ -108,13 +114,14 @@
     box-sizing: border-box;
     display: flex;
     align-items: center;
+    justify-content: center;
     vertical-align: middle;
-    gap: 20px;
+    gap: 30px;
 }
 
 .user-profile {
     display: inline-flex;
-    justify-content: center;
+    justify-content: space-between;
     align-content: center;
     vertical-align: middle;
 }
@@ -148,7 +155,7 @@ input {
 
 .header-actions .user-name {
     font-family: var(--main-font);
-    font-size: 14px;
+    font-size: 13px;
     font-weight: 500;
 }
 
@@ -194,13 +201,13 @@ input {
 
 .profile h2 {
     font-family: var(--main-font);
-    font-size: 13px;
+    font-size: 12px;
     font-weight: 500;
 }
 
 .profile p {
     font-family: var(--main-font);
-    font-size: 21px;
+    font-size: 18px;
     font-weight: 600;
 }
 
@@ -209,4 +216,127 @@ input {
     grid-area: main;
     grid-column: 2 / 3;
     grid-row: 2 / 3;
+    padding: 0 1em;
+    background-color: rgb(226, 241, 246);
+}
+
+.content-grid {
+    display: grid;
+    grid-template-columns: 1fr 270px;
+    grid-template-rows: 1fr 3fr;
+    gap: 2rem;
+}
+
+.main-content h3 {
+    font-family: var(--main-font);
+    font-weight: 600;
+    padding-top: 1em;
+    font-size: 22px;
+    padding-bottom: 0.3em;
+}
+
+.project-grid {
+    display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(350px, 1fr));
+    grid-template-rows: repeat(3, 200px);
+    gap: 20px;
+    height: auto;
+}
+
+.project-card {
+    box-sizing: border-box;
+    border-radius: 7px;
+    box-shadow: 0 4px 12px rgba(0, 0, 0, 0.05);
+    padding: 1rem;
+    background: white;
+    transition: transform 0.2s ease, box-shadow 0.2s ease;
+    font-family: var(--main-font);
+    position: relative;
+    padding-left: 1rem;
+    border-left: 6px solid #f4b400;
+}
+
+
+.project-card:hover {
+    transform: translateY(-3px);
+    box-shadow: 0 8px 20px rgba(0, 0, 0, 0.1);
+}
+
+.project-card h4 {
+    font-size: 16px;
+    font-weight: 600;
+    margin-bottom: 0.5rem;
+}
+
+.project-card p {
+    font-size: 14px;
+    line-height: 1.5;
+    color: gray;
+}
+
+.project-actions {
+    display: flex;
+    padding-top: 2em;
+    justify-content: flex-end;
+    align-items: end;
+    gap: 20px;
+    padding-right: 0.5em;
+}
+
+.project-actions .action-icon {
+    width: 25px;
+    height: 25px;
+}
+
+.sidebar-content .wrapper {
+    padding: 1em 2em;
+    background-color: white;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    gap: 10px;
+    border-radius: 5px;
+    box-shadow: 0 8px 20px rgba(0, 0, 0, 0.08);
+}
+
+.annoucement-item {
+    border-bottom: 1px solid gray;
+    padding-bottom: 0.5em;
+    font-family: var(--main-font);
+}
+
+.annoucement-item:nth-child(3) {
+    border-bottom: none;
+}
+
+.annoucement-item h4 {
+    font-size: 15px;
+    font-weight: 600;
+}
+
+.annoucement-item p {
+    font-size: 12px;
+    color: gray;
+}
+
+.trending .trending-grid {
+    background-color: white;
+    padding: 1.25em 2em;
+    border-radius: 5px;
+    box-shadow: 0 8px 20px rgba(0, 0, 0, 0.08);
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    gap: 10px;
+    font-family: var(--main-font);
+}
+
+.trending-information h4 {
+    font-weight: 600;
+    font-size: 15px;
+}
+
+.trending-information p {
+    font-size: 12px;
+    color: gray;
 }
